--- a/app/src/main/res/layout/activity_registrar_cuenta.xml
+++ b/app/src/main/res/layout/activity_registrar_cuenta.xml
@@ -15,27 +15,30 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:gravity="center"
-        android:text="@string/Registro" />
+        android:text="¿Como deseas registrarte?" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="30dp"
+        android:layout_marginBottom="40dp"
+        android:onClick="registrarEmpresa"
         android:text="@string/empresa" />
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="match_parent"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:onClick="registrarCliente"
         android:text="@string/cliente" />
 
     <TextView
         android:id="@+id/textView5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="45dp"
         android:gravity="center"
+        android:onClick="salirPrincipal"
         android:text="@string/salir" />
 
 </LinearLayout>
