--- a/app/src/main/res/layout/fragment_op3.xml
+++ b/app/src/main/res/layout/fragment_op3.xml
@@ -9,6 +9,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hola mundo culiao" />
+        android:text="fragmento 3" />
 
 </FrameLayout>
