--- a/app/src/main/res/layout/fragment_fragmento_informacion.xml
+++ b/app/src/main/res/layout/fragment_fragmento_informacion.xml
@@ -6,9 +6,22 @@
     tools:context=".fragmentoInformacion">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="hola helio" />
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/textView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
