--- a/app/src/main/res/layout/fragment_fragmento_info_cliente.xml
+++ b/app/src/main/res/layout/fragment_fragmento_info_cliente.xml
@@ -33,8 +33,7 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:padding="10dp"
-            android:text="@string/agua_el_cedro" />
+            android:padding="10dp" />
 
         <TextView
             android:id="@+id/textView9"
