--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -9,11 +9,12 @@
         android:id="@+id/imageView2"
         android:layout_width="205dp"
         android:layout_height="246dp"
+        android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.115"
+        app:layout_constraintVertical_bias="0.425"
         app:srcCompat="@drawable/water_droplets_7781861" />
 
     <TextView
