--- a/app/src/main/res/layout/fragment_fragmento_info_cliente.xml
+++ b/app/src/main/res/layout/fragment_fragmento_info_cliente.xml
@@ -33,7 +33,8 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:inputType="text"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:text="Agua Purificada El Cedro" />
 
         <TextView
             android:id="@+id/textView9"
