--- a/app/src/main/res/layout/activity_formulario_empresa.xml
+++ b/app/src/main/res/layout/activity_formulario_empresa.xml
@@ -92,7 +92,7 @@
 
     <Button
         android:id="@+id/salirbtn"
-        android:layout_width="wrap_content"
+        android:layout_width="101dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="30dp"
