--- a/app/src/main/res/layout/fragment_fragmento_pedido3.xml
+++ b/app/src/main/res/layout/fragment_fragmento_pedido3.xml
@@ -106,7 +106,7 @@
             android:inputType="text" />
 
         <Button
-            android:id="@+id/button6"
+            android:id="@+id/btnhacerpedido"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
