trate de implementar la carga de imagenes para despues poder ya trabajar mas de lleno con la base de datos, si bien hice la conexion con la base de datos y esto se ve en analitics no puedo cargar imagenes a la base de datos

--- a/app/src/main/res/layout/activity_formulario_empresa.xml
+++ b/app/src/main/res/layout/activity_formulario_empresa.xml
@@ -108,4 +108,12 @@
         android:onClick="paginaPrincipal"
         android:text="@string/salir" />
 
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="102dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:onClick="cargar_imagen"
+        android:text="Button" />
+
 </LinearLayout>
